Add planewalker component

--- a/src/ignore/pendulum_low_complex.ipynb
+++ b/src/ignore/pendulum_low_complex.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "import os\n",
     "import sys\n",
+    "import gymnasium as gym\n",
     "nb_dir = os.path.split(os.getcwd())[0]\n",
     "if nb_dir not in sys.path:\n",
     "    sys.path.append(nb_dir)"
@@ -192,14 +193,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-3.5196148666763514\n"
+     "ename": "NameError",
+     "evalue": "name 'pendulum_wrapper' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Assets\\Workspace\\Python\\evolearn\\src\\ignore\\pendulum_low_complex.ipynb Cell 6\u001b[0m line \u001b[0;36m5\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Assets/Workspace/Python/evolearn/src/ignore/pendulum_low_complex.ipynb#W5sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m score \u001b[39m=\u001b[39m step_result[\u001b[39m1\u001b[39m]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Assets/Workspace/Python/evolearn/src/ignore/pendulum_low_complex.ipynb#W5sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m0\u001b[39m,\u001b[39m1000\u001b[39m):\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Assets/Workspace/Python/evolearn/src/ignore/pendulum_low_complex.ipynb#W5sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     step_result \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39mstep([pendulum_wrapper(sel\u001b[39m.\u001b[39mbest\u001b[39m.\u001b[39mevaluate(\u001b[39m*\u001b[39mstep_result[\u001b[39m0\u001b[39m]))])\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Assets/Workspace/Python/evolearn/src/ignore/pendulum_low_complex.ipynb#W5sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     score \u001b[39m=\u001b[39m step_result[\u001b[39m1\u001b[39m]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Assets/Workspace/Python/evolearn/src/ignore/pendulum_low_complex.ipynb#W5sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mprint\u001b[39m(score)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pendulum_wrapper' is not defined"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
