--- a/src/ignore/test21.ipynb
+++ b/src/ignore/test21.ipynb
@@ -2,118 +2,171 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "type(tuple)"
+    "import os\n",
+    "import sys\n",
+    "nb_dir = os.path.split(os.getcwd())[0]\n",
+    "if nb_dir not in sys.path:\n",
+    "    sys.path.append(nb_dir)\n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "from evolvables.expression import ProgramFactory, Program, ProgramCrossoverVariator\n",
+    "from core.evaluator import Evaluator\n",
+    "from core.population import Population\n",
+    "from core.selector import SimpleSelector, Elitist\n",
+    "from core.controller import Controller\n",
+    "from typing import Callable\n",
+    "from evolvables.functionalwalker import WalkerEvaluator, score_function\n",
+    "import math"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
+    "def add(x, y):\n",
+    "    return x+y\n",
     "\n",
-    "# ['a'] is an instance of list\n",
-    "# instantiate := create an instance of a type\n",
+    "def sub(x, y):\n",
+    "    return x-y\n",
     "\n",
-    "class EnclosedChar:\n",
-    "    # constructor\n",
-    "    # I want to instantiate you (you being the type)\n",
-    "    #   what should I do?\n",
+    "def mul(x, y):\n",
+    "    return x-y\n",
     "\n",
-    "    def __init__(self, val: str, encl: str):\n",
-    "        self.val = val\n",
-    "        self.encl = encl\n",
+    "def div(x, y):\n",
+    "    return 0 if y==0 else x/y\n",
     "\n",
-    "    def __str__(self):\n",
-    "        return self.encl + self.val + self.encl\n",
-    "        \n",
+    "def log(x):\n",
+    "    abs_x = abs(x)\n",
+    "    if (abs_x == 0):\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return math.log(abs(x))\n",
     "\n",
-    "echar = EnclosedChar(\"a\", \"_\")\n",
+    "def lim(x, y):\n",
+    "    return max(min(x,2), 0)\n",
+    "\n",
+    "def avg(x, y):\n",
+    "    return (x+y)/2\n",
+    "\n",
+    "def val05():\n",
+    "    return 0.5\n",
+    "def val1():\n",
+    "    return 1\n",
+    "def val2():\n",
+    "    return 2\n",
+    "def val3():\n",
+    "    return 3\n",
+    "\n",
+    "# tree_depth, node_budget = 5, 10\n",
+    "\n",
+    "# a = progf.build(tree_depth, node_budget)\n",
+    "\n",
+    "#print (a)\n",
+    "#progf = ProgramFactory((add, sub, mul, div, mul, div, lim, avg), 4)\n",
     "\n",
     "\n",
+    "# e = progf.build(10, 4, 0.3)\n",
     "\n",
-    "print (str(echar))\n",
+    "\n",
+    "# import math\n",
+    "def himmelblau(x:float, y:float)-> float:\n",
+    "    if x < -5 or x > 5 or y < -5 or y > 5:\n",
+    "        return 1000\n",
+    "    else:\n",
+    "        return (x**2 + y - 11)**2 + (x + y**2 - 7)**2\n",
+    "# eval = \n",
+    "\n",
+    "# print (eval.evaluate(e))\n",
+    "# print (e)\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-37.48\n"
+     ]
+    }
+   ],
    "source": [
-    "from __future__ import annotations\n",
-    "from typing import Self\n",
     "\n",
-    "class Pos():\n",
-    "    def __init__(self, value):\n",
-    "        self.val = value\n",
+    "episode_count = 50\n",
+    "step_count = 1000\n",
     "\n",
-    "    def __str__(self):\n",
-    "        return str(self.val)\n",
-    "    \n",
-    "    def copy(self):\n",
-    "        return Pos(self.val.copy())\n",
-    "    \n",
-    "    def translate(self, delta: int)-> Pos:\n",
-    "        new_pos = self.copy()\n",
-    "        new_pos.val[0] = delta + new_pos.val[0]\n",
-    "        new_pos.val[1] = delta + new_pos.val[1]\n",
-    "        return new_pos\n",
-    "    \n",
+    "test_function = lambda x : 2\n",
     "\n",
-    "class PosThatCanMoveBy1(Pos):\n",
-    "    \n",
+    "e = score_function(himmelblau,\n",
+    "                      lambda x : 6,\n",
+    "                      pop_size = 1,\n",
+    "                      init_point = (-2.5, 2.5),\n",
+    "                      episode_count = episode_count,\n",
+    "                      step_count = step_count)\n",
     "\n",
-    "a = Pos([0,0])\n",
-    "print (a.translate_1())\n",
-    "# print (a)\n",
-    "\n",
-    "# # side effect\n",
-    "# # incremental testing / unit testing\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# a = Pos([1,2]) #(1,2)\n",
-    "# b = Pos.translate_static(a,4)\n",
-    "# print (a)\n",
-    "# print (b)\n",
-    "\n",
-    "\n"
+    "# dict = {}\n",
+    "# for i in [ 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4]:\n",
+    "#     dict[i] = score_function(himmelblau,\n",
+    "#                       lambda x : i,\n",
+    "#                       pop_size = 1,\n",
+    "#                       init_point = (-2.5, 2.5),\n",
+    "#                       episode_count = episode_count,\n",
+    "#                       step_count = step_count)\n",
+    "print (e)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0.1: 0.0,\n",
+       " 0.2: 0.0,\n",
+       " 0.3: 0.0,\n",
+       " 0.4: 0.0,\n",
+       " 0.5: 0.0,\n",
+       " 0.6: 0.0,\n",
+       " 0.7: 0.0,\n",
+       " 0.8: 0.0,\n",
+       " 0.9: 0.0,\n",
+       " 1: 0.0,\n",
+       " 1.1: 0.0,\n",
+       " 1.2: 0.0,\n",
+       " 1.3: 0.0,\n",
+       " 1.4: 0.0,\n",
+       " 1.5: 0.0,\n",
+       " 1.6: 0.0,\n",
+       " 1.7: 0.0}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "class EnclosedChar():\n",
-    "    def __init__(self, char, encl):\n",
-    "        self.char = char\n",
-    "        self.encl = encl\n",
-    "\n",
-    "    def __str__(self):\n",
-    "        return self.encl + self.char + self.encl\n",
-    "    \n",
-    "class SuperEnclosedChar(EnclosedChar):\n",
-    "    def __str__(self):\n",
-    "        return self.encl + super().__str__() + self.encl\n",
-    "\n",
-    "\n",
-    "    \n",
-    "print (SuperEnclosedChar(\"a\", \"_\"))"
+    "dict\n"
    ]
   },
   {
@@ -219,30 +272,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 4) (2329236598.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[19], line 4\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(\"else clause executed:)\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unterminated string literal (detected at line 4)\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "class Real():\n",
-    "    def __init__(self, real):\n",
-    "        self.real = real\n",
-    "\n",
-    "    def __str__(self):\n",
-    "        return f\"{self.real}\"\n",
-    "\n",
-    "\n",
-    "class Complex(Real):\n",
-    "    def __init__(self, real, img):\n",
-    "        super().__init__(real)\n",
-    "        self.img = img\n",
-    "\n",
-    "    def __str__(self):\n",
-    "        return f\"{self.real}+{self.img}i\"\n",
-    "\n",
-    "print (Real(1))\n",
-    "print (Complex(1,2))\n",
-    "        "
+    "for x in []:\n",
+    "    print(\"element in [] accessed\")\n",
+    "else:\n",
+    "    print(\"else clause executed:\")\n"
    ]
   }
  ],
